--- a/Panda/app/src/main/res/layout/activity_loading.xml
+++ b/Panda/app/src/main/res/layout/activity_loading.xml
@@ -5,22 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoadingActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:gravity="center">
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/pubao"
+        android:layout_gravity="center"/>
 
     <TextView
         android:layout_gravity="center"
         android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="20dp"
+        android:layout_height="wrap_content"
         android:text="Panda"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:fontFamily="@font/maplebold"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="100dp"/>
+        android:textColor="#000000"
+        android:textSize="100dp"
+        android:layout_marginBottom="100dp"/>
 
 </LinearLayout>
