--- a/Panda/app/src/main/res/layout/memoitem.xml
+++ b/Panda/app/src/main/res/layout/memoitem.xml
@@ -10,8 +10,8 @@
     android:background="@android:color/white">
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical"
         android:gravity="center_vertical">
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:includeFontPadding="false"
-            android:text="TITLE"
+            android:text="Title"
             android:textSize="15sp"
             android:textColor="@android:color/black"
             android:textStyle="bold"/>
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:includeFontPadding="false"
-            android:text="content"
+            android:text="contents"
             android:textSize="13sp"
             android:textColor="@android:color/darker_gray"/>
     </LinearLayout>
