--- a/Panda/app/src/main/res/values/colors.xml
+++ b/Panda/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="green">#FF008000</color>
+    <color name="lightgreen">#FF90ee90</color>
+    <color name="mediumseagreen">#FF3cb371</color>
+    <color name="forestgreen">#FF228b22</color>
+    <color name="darkgreen">#FF006400</color>
+    <color name="black">#ff000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
