--- a/Panda/app/src/main/res/layout/activity_date.xml
+++ b/Panda/app/src/main/res/layout/activity_date.xml
@@ -5,62 +5,59 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DateActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/white">
 
     <TextView
         android:gravity="center"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:text="알림설정"
-        android:textSize="50dp"
-        android:textColor="#000000"
+        android:layout_height="50dp"
+        android:text="날짜설정"
+        android:textSize="40dp"
+        android:textColor="@color/green"
+        android:fontFamily="@font/lottebold"
         />
     <TableRow
         android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:gravity="center">
+        android:layout_width="match_parent">
 
         <TextView
             android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:textSize="30dp"
+            android:layout_height="25dp"
+            android:textSize="20dp"
             android:text="오늘 날짜: "
-            android:textColor="#000000"/>
+            android:textColor="#000000"
+            android:fontFamily="@font/lottelight"/>
 
         <TextView
             android:id="@+id/today_date"
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:textSize="30dp"
-            android:textColor="#000000"/>
+            android:layout_height="25dp"
+            android:textSize="20dp"
+            android:textColor="@color/green" />
     </TableRow>
 
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="right">
-        <Button
-            android:id="@+id/dateSetting"
-            android:layout_gravity="right"
+        android:gravity="center">
+        <TextView
             android:layout_marginRight="20dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="날짜 설정"/>
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:textSize="30dp"
-            android:textColor="#000000"/>
+            android:textSize="20dp"
+            android:text="날짜"
+            android:fontFamily="@font/lottelight"
+            android:textColor="#000000" />
         <DatePicker
             android:id="@+id/dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:calendarViewShown="false"
             android:datePickerMode="spinner" />
     </TableRow>
@@ -68,22 +65,51 @@
     <TableRow
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:gravity="right">
+        android:gravity="center">
+        <TextView
+            android:layout_marginRight="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:textSize="20dp"
+            android:text="시간"
+            android:fontFamily="@font/lottelight"
+            android:textColor="#000000" />
         <TimePicker
             android:id="@+id/tp"
             android:layout_marginTop="0dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:timePickerMode="spinner"/>
+            android:timePickerMode="spinner" />
     </TableRow>
 
-    <RadioButton
+    <TableRow
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:orientation="horizontal">
+    <CheckBox
         android:id="@+id/alarmYN"
+        android:layout_gravity="left"
         android:layout_marginLeft="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="정해진 시간에 알림 설정"/>
+        android:text="정해진 시간에 알림 설정"
+        android:fontFamily="@font/lottelight"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
+    <Button
+        android:id="@+id/dateSetting"
+        android:gravity="center"
+        android:layout_marginRight="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="날짜 설정"
+        android:background="@drawable/greenbold"
+        android:textColor="@color/white"
+        android:fontFamily="@font/lottelight"/>
+    </TableRow>
 
 </LinearLayout>
