--- a/Panda/app/src/main/res/values/themes.xml
+++ b/Panda/app/src/main/res/values/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Panda" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Panda" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/lightgreen</item>
+        <item name="colorPrimary">@color/green</item>
         <item name="colorPrimaryVariant">@color/mediumseagreen</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -10,7 +10,9 @@
         <item name="colorSecondaryVariant">@color/darkgreen</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
         <!-- Customize your theme here. -->
+        <item name="windowNoTitle">true</item>
     </style>
+
 </resources>
