--- a/Panda/app/src/main/res/layout/activity_write.xml
+++ b/Panda/app/src/main/res/layout/activity_write.xml
@@ -51,7 +51,7 @@
             android:id="@+id/button2"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="5dp"
-            android:src="@drawable/calander"
+            android:src="@drawable/alarm"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:scaleType="centerInside"
