--- a/Panda/app/src/main/res/layout/activity_memo.xml
+++ b/Panda/app/src/main/res/layout/activity_memo.xml
@@ -1,30 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MemoActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".MemoActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="621dp"
-        android:background="#F0F0F0" />
+        android:layout_height="match_parent"
+        android:background="#ffffff"
+        android:fillViewport="true">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="110dp"
-        android:layout_height="97dp"
-        android:background="#000000"
-        android:text="+"
-        android:textColor="@color/black"
-        android:textSize="50dp"
-        android:textStyle="bold" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
 
 
 
-</LinearLayout>
+    </ScrollView>
 
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="30dp"
+        app:fabSize="normal"
+        android:clickable="true"
+        app:srcCompat="@drawable/ic_add_black_24dp" />
+
+
+
+
+
+
+</RelativeLayout>
