--- a/Panda/app/src/main/res/layout/activity_login.xml
+++ b/Panda/app/src/main/res/layout/activity_login.xml
@@ -17,14 +17,13 @@
             android:layout_height="65dp"
             android:layout_gravity="center_horizontal"
             android:gravity="center"
-            android:text="로그인" />
+            android:text="로그인"
+            android:fontFamily="@font/lottebold"/>
         <com.google.android.gms.common.SignInButton
             android:id="@+id/sign_in_button"
             android:layout_width="214dp"
             android:layout_height="71dp"
             android:layout_gravity="center" />
-
-
     </LinearLayout>
 
 
