--- a/Panda/app/src/main/res/layout/widget_listview.xml
+++ b/Panda/app/src/main/res/layout/widget_listview.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,7 +11,10 @@
         android:id="@+id/widget_test_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="panda"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold|italic"/>
 
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/widget_listview"
