--- a/Panda/app/src/main/res/layout/list_item.xml
+++ b/Panda/app/src/main/res/layout/list_item.xml
@@ -6,35 +6,34 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10dp">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#fff"
-        android:orientation="horizontal"
-        android:padding="10dp">
-
         <TextView
             android:id="@+id/item_maintext"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:fontFamily="@font/lottelight"
-            android:textSize="14sp"/>
-
-        <ImageView
-            android:id="@+id/item_image"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@color/black"/>
-    </LinearLayout>
+            android:fontFamily="@font/lottebold"
+            android:textSize="20dp"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/green"/>
 
     <TextView
         android:id="@+id/item_subtext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#F1F1F1"
+        android:background="@color/white"
         android:fontFamily="@font/lottelight"
-        android:padding="10dp" />
+        android:padding="8dp"
+        android:gravity="right" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/black"
+        android:layout_marginBottom="3dp"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/black"/>
 
 </LinearLayout>
