--- a/Panda/app/src/main/res/values/colors.xml
+++ b/Panda/app/src/main/res/values/colors.xml
@@ -5,11 +5,15 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
     <color name="light_blue_50">#FFE1F5FE</color>
     <color name="light_blue_200">#FF81D4FA</color>
     <color name="light_blue_600">#FF039BE5</color>
     <color name="light_blue_900">#FF01579B</color>
     <color name="green">#FF008000</color>
+    <color name="lightgreen">#FF90ee90</color>
+    <color name="mediumseagreen">#FF3cb371</color>
+    <color name="forestgreen">#FF228b22</color>
+    <color name="darkgreen">#FF006400</color>
+    <color name="black">#ff000000</color>
+    <color name="white">#FFFFFFFF</color>
 </resources>
